@@ -1,3 +1,8 @@
+Rend 0.8.0 changelog:
+
+UX:
+* Game setup screen now shows the server IP
+
 Rend 0.7.0 changelog:
 
 Gameplay:
